<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="no_messages">No data found!..</string>
    <string name="QytToast">Quantity must not be 0</string>
    <string name="Itemtoast">You are reach Item price limit maximum and minimum </string>
    <string name="AmountToast">Amount did not match</string>
    <string name="Amounttoast">Amount not found</string>
    <string name="Datetoast">Please insert opening date</string>
    <string name="NameToast">Please insert account name</string>
    <string name="RateToast">Please insert account Rate</string>
    <string name="TimeToast">Please insert account Time(in year)</string>
    <string name="NameItemToast">Please insert item name</string>
    <string name="NameItemPrintToast">Please insert item print name</string>
    <string name="SalepriceToast">Please insert item sale price</string>
    <string name="PurchasespriceToast">Please insert item purchases price</string>
    <string name="UnitToast">Please insert item unit</string>
    <string name="MRPToast">Please insert item MRP price</string>
    <string name="MinsaleToast">Please insert item Min. sale price price</string>
    <string name="parentNotSelectedToast">Please parrent group first</string>
    <string name="alreadyEmptyItemPresent">You already have empty item.</string>
    <string name="CrDR">Cr/Dr amount are not same </string>
    <string name="ToastParrent">Select parrent first </string>
    <string name="Add">Add</string>
    <string name="ParentName">Parent</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Cash">Cash</string>
    <string name="Tranfer">Transfer</string>
    <string name="Total">Total</string>
    <string name="Cashook">L.F. No</string>
    <string name="Show">Show Account</string>
    <string name="Headof">Head of Account</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="Address">Address</string>
    <string name="Contact">Contact</string>
    <string name="GPName">Parent Group</string>
    <string name="PrintName">Print Name</string>
    <string name="Sale_price">Sale</string>
    <string name="masters">Masters</string>
    <string name="General_Ledger">General Ledger</string>
    <string name="Daily_Ledger">Daily Ledger</string>
    <string name="PurchasesPrice">Purchase</string>
    <string name="MRP">MRP</string>
    <string name="Min_Sale_price">Min.Sale</string>
    <string name="Voucher">Voucher</string>
    <string name="voucher_name">Choose Voucher :</string>
    <string name="SR_NO">Sr no.</string>
    <string name="Duration">Duration</string>
    <string name="Rate">Rate(%)</string>
    <string name="Time">Time</string>
    <string name="Interest">Interest</string>
    <string name="Item">Choose Item</string>
    <string name="Qty">Qty</string>
    <string name="Unit">Unit</string>
    <string name="Price">Price</string>
    <string name="Amount">Amount</string>
    <string name="Type">Type</string>
    <string name="Credit">Credit(Rs.)</string>
    <string name="Debit">Debit(Rs.)</string>
    <string name="CRDR">Cr/Dr</string>
    <string name="Narration">Narration</string>
    <string name="Ac_name">Choose Account :</string>
    <string name="Ac">Account</string>
    <string name="Datefrom">From</string>
    <string name="Date">Date</string>
    <string name="parti">Particulars</string>
    <string name="DateTo">To</string>
    
    <string name="choose_keybord">Change Keyboard</string>
    <string name="change_lan">Choose Language</string>
    <string name="Add_new">Add new Account and Item</string>
    <string name="backup">Backup Data</string>
    <string name="print">Print Sheets</string>
    <string name="AboutUs">About Us</string>
    <string name="interest_calculate">Interest Calculator</string>
    <string name="Searchable">Search content.....</string>
    <string name="Transaction">Transaction</string>
    <string name="Settings">Settings</string>
    <string name="TransactionToast">Transaction did not save,retry !</string>
    <string name="voucher_date">Date :</string>
    <string name="submit">Submit</string>
    <string name="app_name">Accounts</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="Change_key">Change Keyboard</string>
    <string name="DeleteItemsg">No item Entry found for delete</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_login">Login</string>
    <string name="title_activity_activity_company_items">Details</string>
    <string name="title_activity_activity_daily_lager">Daily Lager</string>
    <string name="title_activity_main">Goods Manage</string>
    <string name="title_activity_activity_print_preview">Print Preview</string>
    <string name="title_activity_custom_account_show_spinner">Custom_accountShowSpinner</string>
    <string name="title_activity_custom_accountshow_spinner">Choose Account</string>
    <string name="title_activity_custom_daily_debit">Custom_dailyDebit</string>
    <string name="title_activity_custom_daily_credit">Custom_dailyCredit</string>
    <string name="title_activity_activity_data_entrydaily_lager">Data Entry</string>
    <string name="title_activity_activity_genral_lager">Genral Lager</string>
    <string name="title_activity_activity_show_goods_remaining">Goods Remaining</string>
    <string name="title_activity_activity_transaction">Transaction</string>
    <string name="title_activity_activity__setting">Setting</string>
    <string name="title_activity_activity__setting_language">Language</string>
    <string name="title_activity_activity__add_new">Add New</string>
    <string name="title_activity_activity_transaction__receipt">Activity_transaction_Receipt</string>
    <string name="title_activity_activity_account_chooser">Chooser</string>
    <string name="title_activity_activity_interest_calculate">Interest Calculator</string>
    <string name="title_activity_activity_voucher">Vouchers</string>
    <string name="title_activity_activity_print_details">Print Details</string>

</resources>
