<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="${relativePackage}.${activityClass}" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:paddingTop="5dp"
        android:orientation="horizontal" >

         <!-- <AutoCompleteTextView
             android:id="@+id/GlautoAc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:text="@string/Ac" >

             <requestFocus />
         </AutoCompleteTextView> -->
         <TextView
                android:id="@+id/txtAc"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/Ac" />
         
         <TextView
                android:id="@+id/txtChooseAc"
                android:layout_width="0dp"
                android:layout_weight="2.0"
                android:gravity="center"
                android:textStyle="bold"
                android:hint="@string/Ac"
                android:maxLines="1"
                android:background="@drawable/press"
                android:layout_height="wrap_content"
                android:onClick="accountChoose"
                android:clickable="true"
                android:text="" />

       <TextView
                android:id="@+id/txtfrom"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/Datefrom" />

            <TextView
                android:id="@+id/textVidate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text=""
                android:gravity="center"
                android:background="@drawable/back"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/txtTo"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/DateTo" />

            <TextView
                android:id="@+id/txttodate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text=""
                android:gravity="center"
                android:background="@drawable/back"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btnGO"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                style="@style/btnStyleShakespeare"
                android:text="@string/submit"
                android:onClick="onSubmit" />
            
        </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
         android:layout_marginTop="10dp"
        android:background="@drawable/btn_selecter"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtGLdate"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:gravity="center"
            android:textColor="@color/Black"
             />

        <TextView
            android:id="@+id/txtGLparti"
             android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/parti"
            android:gravity="center"
            android:textColor="@color/Black"
             />

        <TextView
            android:id="@+id/txtGLdebitRS"
             android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="@string/Debit"
            android:gravity="center"
            android:textColor="@color/Black"
            />

        <TextView
            android:id="@+id/txtGLcreditRS"
             android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="@string/Credit"
            android:gravity="center"
            android:textColor="@color/Black"
             />

        <TextView
            android:id="@+id/txtGLbalence"
             android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="@string/Amount"
            android:gravity="center"
            android:textColor="@color/Black"
             />
        
    </LinearLayout>
    
     <LinearLayout
         android:id="@+id/linearList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.0"
        android:visibility="gone"
         android:orientation="horizontal" >

         <ListView
             android:id="@+id/listViewGL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              >
         </ListView>
        
</LinearLayout>
<LinearLayout android:id="@+id/empty"
    android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="5.0"
      android:gravity="center">

     <TextView android:text="@string/no_messages"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:typeface="serif">
    </TextView>

</LinearLayout>
     
</LinearLayout>
