<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_weight="1.4"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ParentName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Black"
           >
        </LinearLayout>
   
    <ListView
        android:id="@+id/listshowaccounts_gp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        
        android:layout_weight="9.0" >
    </ListView>

    <!--
        <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"/>
    -->

</LinearLayout>
